(Node.java).Added a null check for address.getAddress() to prevent a NullPointerException. The method now falls back to getHostString() if the underlying InetAddress is not available. (pom.xml) Added more <buildArg> and changed version of (maven.plugin) to 0.11.3 .(version.java) Delete slash in line 43. (PublishSporkChannelHandlerTest.java‎) Added (atMost(60, SECONDS)) in line 107